--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -83,7 +83,7 @@
               <div class="description pull-right"><a href="https://github.com/rselk">http:/ca.linkedin.com/in/rselk/</a></div>
             </div>
             <div class="contact-item">
-              <div class="icon pull-left text-center"><img src="{{ ASSET_PATH }}/img/cw.png" height="25" width="26"></img></div>
+              <div class="icon pull-left text-center"><img src="{{ ASSET_PATH }}/img/cw.png" height="30" width="33"></img></div>
               <div class="title pull-right">CoderWall</div>
               <div class="description pull-right"><a href="https://coderwall.com/r-s-">https://coderwall.com/r-s-</a></div>
             </div>
@@ -101,7 +101,7 @@
           </div>
           <!-- SKILLS -->
           <div class="box">
-            <h2>Technical Skills</h2>
+            <h2>Skills</h2>
             <div class="skills">
               <div class="item-skills" data-percent="0.85">Application Development</div>
               <div class="item-skills" data-percent="0.80">Object Orientated Programming</div>
@@ -109,7 +109,7 @@
               <div class="item-skills" data-percent="0.70">Algorithms</div>
               <div class="item-skills" data-percent="0.65">Functional Programming</div>
               <div class="item-skills" data-percent="0.60">Design Patterns</div>
-              <div class="item-skills" data-percent="0.60">Geographical Information Systems</div>
+              <div class="item-skills" data-percent="0.60">GIS</div>
               <div class="item-skills" data-percent="0.50">Cloud Computing</div>
 
               <div class="skills-legend clearfix">
@@ -122,7 +122,7 @@
           </div>
           <!-- LANGUAGES -->
           <div class="box">
-            <h2>Languages - FrameWorks - Software</h2>
+            <h2>Technical</h2>
             <div id="language-skills">
               <div class="skill">Ruby / Rails<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
               <div class="skill">C++<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
