--- a/_layouts/ryan.html
+++ b/_layouts/ryan.html
@@ -56,18 +56,14 @@ theme :
           <div id="photo-header" class="text-center">
             <!-- PHOTO (AVATAR) -->
               <h1><strong>Ryan Selk</strong><small> Software Developer</small></h1>
-              <a href="http://ryanselk.com">HOME</a> | <a href="http://ryanselk.com/archive.html">ARCHIVE</a>
+               <a href="http://ryanselk.com">HOME</a> | <a href="http://ryanselk.com/about.html">ABOUT</a> | <a href="http://ryanselk.com/archive.html">ARCHIVE</a>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-8 col-sm-offset-2">
 
-
-
            {{ content }}
-
-
 
  {% unless page.categories == empty %}
     <ul class="tag_box inline">
