--- a/_includes/themes/bootstrap-3/side.html
+++ b/_includes/themes/bootstrap-3/side.html
@@ -50,7 +50,7 @@
           <div id="photo-header" class="text-center">
             <!-- PHOTO (AVATAR) -->
               <h1><strong>Ryan Selk</strong><small> Software Developer</small></h1>
-                 <a href="http://ryanselk.com">HOME</a> | <a href="http://ryanselk.com/about.html">ABOUT</a> | <a href="http://ryanselk.com/archive.html">ARCHIVE</a>
+                 <a href="http://ryanselk.com">HOME</a> | <a href="http://ryanselk.com/archive.html">ABOUT</a> | <a href="http://ryanselk.com/archive.html">ARCHIVE</a>
           </div>
         </div>
       </div>
@@ -86,7 +86,7 @@
             <div class="contact-item">
               <div class="icon pull-left text-center"><img src="{{ ASSET_PATH }}/img/cw.png" height="30" width="33"></img></div>
               <div class="title pull-right">CoderWall</div>
-              <div class="description pull-right"><a href="https://coderwall.com/rselk-">https://coderwall.com/rselk</a></div>
+              <div class="description pull-right"><a href="https://coderwall.com/r-s-">https://coderwall.com/r-s-</a></div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-twitter fa-fw"></span></div>
@@ -100,9 +100,52 @@
               <div class="description pull-right">ryan.selk</div>
             </div>
           </div>
-         
+          <!-- SKILLS -->
+          <div class="box">
+            <h2>Skills</h2>
+            <div class="skills">
+              <div class="item-skills" data-percent="0.85">Application Development</div>
+              <div class="item-skills" data-percent="0.80">Object Orientated Programming</div>
+              <div class="item-skills" data-percent="0.70">Data Structures</div>
+              <div class="item-skills" data-percent="0.70">Algorithms</div>
+              <div class="item-skills" data-percent="0.65">Functional Programming</div>
+              <div class="item-skills" data-percent="0.60">Design Patterns</div>
+              <div class="item-skills" data-percent="0.60">GIS</div>
+              <div class="item-skills" data-percent="0.50">Cloud Computing</div>
+
+              <div class="skills-legend clearfix">
+                <div class="legend-left legend">Beginner</div>
+                <div class="legend-left legend"><span>Intermediate</span></div>
+                <div class="legend-right legend"><span>Advanced</span></div>
+                <div class="legend-right legend">Expert</div>
+              </div>
+            </div>
+          </div>
+          <!-- LANGUAGES -->
+          <div class="box">
+            <h2>Technical</h2>
+            <div id="language-skills">
+              <div class="skill">Ruby / Rails<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
+              <div class="skill">C++<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
+              <div class="skill">LISP (Scheme/Racket)<div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
+              <div class="skill">Linux<div class="icons pull-right"><div style="width: 75%;" class="icons-red"></div></div></div>
+              <div class="skill">HTML5<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
+              <div class="skill">CSS3<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
+              <div class="skill">Git<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
+              <div class="skill">ArcGIS<div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
+              <div class="skill">Adobe Framemaker<div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
+            </div>
+          </div>
+          <!-- HOBBIES -->
+          <div class="box">
+            <h2>Hobbies</h2>
+            <div class="hobby">Programming</div>
+            <div class="hobby">Weightlifting</div>
+            <div class="hobby">Hiking</div>
+            <div class="hobby">Biking</div>
+          </div>
         </div>
-                
+      </div>
 
 
     <!-- Latest compiled and minified JavaScript, requires jQuery 1.x (2.x not supported in IE8) -->
