--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -22,6 +22,8 @@
     <!-- Custom styles -->
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
+    <script type="text/javascript" src="http://www.skypeassets.com/i/scom/js/skype-uri.js"></script>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -71,7 +73,7 @@
             <h2>Contact</h2>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-envelope fa-fw"></span></div>
-              <div class="title only pull-right">ryanselk@gmail.com</div>
+              <div class="title only pull-right"><a href="mailto:ryanselk@gmail.com">ryanselk@gmail.com</a></div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-github fa-fw"></span></div>
@@ -86,18 +88,22 @@
             <div class="contact-item">
               <div class="icon pull-left text-center"><img src="{{ ASSET_PATH }}/img/cw.png" height="30" width="33"></img></div>
               <div class="title pull-right">CoderWall</div>
-              <div class="description pull-right"><a href="https://coderwall.com/rselk-">https://coderwall.com/rselk</a></div>
+              <div class="description pull-right"><a href="https://coderwall.com/rselk">https://coderwall.com/rselk</a></div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-twitter fa-fw"></span></div>
               <div class="title pull-right">Twitter</div>
-              <div class="description pull-right"><a href="https://twitter.com/rselk">http://twitter.com/rselk</a></div>
+              <div class="description pull-right"><a href="https://twitter.com/rselk">http://twitter.com/rselk</a>
+
+              </div>
             </div>
 
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-skype fa-fw"></span></div>
               <div class="title pull-right">Skype</div>
-              <div class="description pull-right">ryan.selk</div>
+              <div class="description pull-right">
+             <a href="skype:ryan.selk?chat">ryan.sek</a> 
+              </div>
             </div>
           </div>
          
