--- a/_includes/themes/bootstrap-3/side.html
+++ b/_includes/themes/bootstrap-3/side.html
@@ -65,13 +65,13 @@
 
 
         </div>
-        <div class="col-xs-12 col-sm-5">
+               <div class="col-xs-12 col-sm-5">
           <!-- CONTACT -->
           <div class="box clearfix">
             <h2>Contact</h2>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-envelope fa-fw"></span></div>
-              <div class="title only pull-right">ryanselk@gmail.com</div>
+              <div class="title only pull-right"><a href="mailto:ryanselk@gmail.com">ryanselk@gmail.com</a></div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-github fa-fw"></span></div>
@@ -81,23 +81,27 @@
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-linkedin fa-fw"></span></div>
               <div class="title pull-right">Linkedin</div>
-              <div class="description pull-right"><a href="https://github.com/rselk">http:/ca.linkedin.com/in/rselk/</a></div>
+              <div class="description pull-right"><a href="https://github.com/rselk">http:/ca.linkedin.com/in/rselk</a></div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><img src="{{ ASSET_PATH }}/img/cw.png" height="30" width="33"></img></div>
               <div class="title pull-right">CoderWall</div>
-              <div class="description pull-right"><a href="https://coderwall.com/r-s-">https://coderwall.com/r-s-</a></div>
+              <div class="description pull-right"><a href="https://coderwall.com/rselk">https://coderwall.com/rselk</a></div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-twitter fa-fw"></span></div>
               <div class="title pull-right">Twitter</div>
-              <div class="description pull-right"><a href="https://twitter.com/rselk">http://twitter.com/rselk</a></div>
+              <div class="description pull-right"><a href="https://twitter.com/rselk">http://twitter.com/rselk</a>
+
+              </div>
             </div>
 
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-skype fa-fw"></span></div>
               <div class="title pull-right">Skype</div>
-              <div class="description pull-right">ryan.selk</div>
+              <div class="description pull-right">
+             <a href="skype:ryan.selk?chat">ryan.sek</a> 
+              </div>
             </div>
           </div>
           <!-- SKILLS -->
@@ -135,14 +139,6 @@
               <div class="skill">ArcGIS<div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
               <div class="skill">Adobe Framemaker<div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
             </div>
-          </div>
-          <!-- HOBBIES -->
-          <div class="box">
-            <h2>Hobbies</h2>
-            <div class="hobby">Programming</div>
-            <div class="hobby">Weightlifting</div>
-            <div class="hobby">Hiking</div>
-            <div class="hobby">Biking</div>
           </div>
         </div>
       </div>
