--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -83,7 +83,7 @@
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-linkedin fa-fw"></span></div>
               <div class="title pull-right">Linkedin</div>
-              <div class="description pull-right"><a href="http:/ca.linkedin.com/in/rselk">http:/ca.linkedin.com/in/rselk</a></div>
+              <div class="description pull-right"><a href="http://ca.linkedin.com/in/rselk">http://ca.linkedin.com/in/rselk</a></div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><img src="{{ ASSET_PATH }}/img/cw.png" height="30" width="33"></img></div>
