--- a/_includes/themes/bootstrap-3/side.html
+++ b/_includes/themes/bootstrap-3/side.html
@@ -13,7 +13,7 @@
 
     <!-- Bootstrap styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ ASSET_PATH }}/bootstrap/css/main.css" rel="stylesheet">
+    <link href="{{ ASSET_PATH }}/css/main.css" rel="stylesheet">
     <!-- Optional theme -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
     <!-- Sticky Footer -->
@@ -82,11 +82,6 @@
               <div class="icon pull-left text-center"><span class="fa fa-linkedin fa-fw"></span></div>
               <div class="title pull-right">Linkedin</div>
               <div class="description pull-right"><a href="http://ca.linkedin.com/in/rselk">http://ca.linkedin.com/in/rselk</a></div>
-            </div>
-            <div class="contact-item">
-              <div class="icon pull-left text-center"><img src="{{ ASSET_PATH }}/img/cw.png" height="30" width="33"></img></div>
-              <div class="title pull-right">CoderWall</div>
-              <div class="description pull-right"><a href="https://coderwall.com/rselk">https://coderwall.com/rselk</a></div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-twitter fa-fw"></span></div>
