--- a/_includes/themes/bootstrap-3/side.html
+++ b/_includes/themes/bootstrap-3/side.html
@@ -95,7 +95,7 @@
               <div class="icon pull-left text-center"><span class="fa fa-skype fa-fw"></span></div>
               <div class="title pull-right">Skype</div>
               <div class="description pull-right">
-             <a href="skype:ryan.selk?chat">ryan.sek</a> 
+             <a href="skype:ryan.selk?chat">ryan.selk</a> 
               </div>
             </div>
           </div>
