--- a/_includes/themes/bootstrap-3/side.html
+++ b/_includes/themes/bootstrap-3/side.html
@@ -99,44 +99,51 @@
               </div>
             </div>
           </div>
-          <!-- SKILLS -->
-          <div class="box">
-            <h2>Skills</h2>
-            <div class="skills">
-              <div class="item-skills" data-percent="0.85">Application Development</div>
-              <div class="item-skills" data-percent="0.80">Object Orientated Programming</div>
-              <div class="item-skills" data-percent="0.70">Data Structures</div>
-              <div class="item-skills" data-percent="0.70">Algorithms</div>
-              <div class="item-skills" data-percent="0.65">Functional Programming</div>
-              <div class="item-skills" data-percent="0.60">Design Patterns</div>
-              <div class="item-skills" data-percent="0.60">GIS</div>
-              <div class="item-skills" data-percent="0.50">Cloud Computing</div>
 
-              <div class="skills-legend clearfix">
-                <div class="legend-left legend">Beginner</div>
-                <div class="legend-left legend"><span>Intermediate</span></div>
-                <div class="legend-right legend"><span>Advanced</span></div>
-                <div class="legend-right legend">Expert</div>
-              </div>
-            </div>
-          </div>
-          <!-- LANGUAGES -->
-          <div class="box">
-            <h2>Technical</h2>
-            <div id="language-skills">
-              <div class="skill">Ruby / Rails<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
-              <div class="skill">C++<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
-              <div class="skill">LISP (Scheme/Racket)<div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
-              <div class="skill">Linux<div class="icons pull-right"><div style="width: 75%;" class="icons-red"></div></div></div>
-              <div class="skill">HTML5<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
-              <div class="skill">CSS3<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
-              <div class="skill">Git<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
-              <div class="skill">ArcGIS<div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
-              <div class="skill">Adobe Framemaker<div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
+       <!-- SKILLS -->
+        <div class="box">
+          <h2>Skills</h2>
+          <div class="skills">
+            <div class="item-skills" data-percent="0.95">Application Development</div>
+            <div class="item-skills" data-percent="0.95">Software Architecture</div>
+            <div class="item-skills" data-percent="0.85">Object Orientated Programming</div>
+            <div class="item-skills" data-percent="0.85">Functional Programming</div>
+            <div class="item-skills" data-percent="0.85">Databases</div>
+            <div class="item-skills" data-percent="0.80">Cloud Computing</div>
+            <div class="item-skills" data-percent="0.80">Data Structures</div>
+            <div class="item-skills" data-percent="0.80">Algorithms</div>
+            <div class="item-skills" data-percent="0.70">GIS</div>
+
+            <div class="skills-legend clearfix">
+              <div class="legend-left legend">Beginner</div>
+              <div class="legend-left legend"><span>Intermediate</span></div>
+              <div class="legend-right legend"><span>Advanced</span></div>
+              <div class="legend-right legend">Expert</div>
             </div>
           </div>
         </div>
+        <!-- LANGUAGES -->
+        <div class="box">
+          <h2>Technical</h2>
+          <div id="language-skills">
+            <div class="skill">Ruby<div class="icons pull-right"><div style="width: 100%;" class="icons-red"></div></div></div>
+            <div class="skill">Rails<div class="icons pull-right"><div style="width: 100%;" class="icons-red"></div></div></div>
+            <div class="skill">C++<div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
+            <div class="skill">C<div class="icons pull-right"><div style="width: 85%;" class="icons-red"></div></div></div>
+            <div class="skill">LISP (Scheme/Racket)<div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
+            <div class="skill">Postgres<div class="icons pull-right"><div style="width: 88%;" class="icons-red"></div></div></div>
+            <div class="skill">MySQL<div class="icons pull-right"><div style="width: 88%;" class="icons-red"></div></div></div>
+            <div class="skill">HTML/CSS<div class="icons pull-right"><div style="width: 95%;" class="icons-red"></div></div></div>
+            <div class="skill">Linux<div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
+            <div class="skill">Git<div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
+            <div class="skill">ArcGIS<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
+            <div class="skill">ENVI<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
+            <div class="skill">VIM<div class="icons pull-right"><div style="width: 99%;" class="icons-red"></div></div></div>
+          </div>
+        </div>
       </div>
+    </div>
+
 
 
     <!-- Latest compiled and minified JavaScript, requires jQuery 1.x (2.x not supported in IE8) -->
