--- a/_includes/themes/bootstrap-3/side.html
+++ b/_includes/themes/bootstrap-3/side.html
@@ -104,15 +104,15 @@
         <div class="box">
           <h2>Skills</h2>
           <div class="skills">
-            <div class="item-skills" data-percent="0.95">Application Development</div>
-            <div class="item-skills" data-percent="0.95">Software Architecture</div>
-            <div class="item-skills" data-percent="0.85">Object Orientated Programming</div>
-            <div class="item-skills" data-percent="0.85">Functional Programming</div>
-            <div class="item-skills" data-percent="0.85">Databases</div>
-            <div class="item-skills" data-percent="0.80">Cloud Computing</div>
-            <div class="item-skills" data-percent="0.80">Data Structures</div>
-            <div class="item-skills" data-percent="0.80">Algorithms</div>
-            <div class="item-skills" data-percent="0.70">GIS</div>
+            <div class="item-skills" data-percent="0.95">Ruby</div>
+            <div class="item-skills" data-percent="0.95">Javascript</div>
+            <div class="item-skills" data-percent="0.85">SQL (Postgres, MySQL)</div>
+            <div class="item-skills" data-percent="0.85">NoSql (Elasticsearch, Mongo)</div>
+            <div class="item-skills" data-percent="0.85">Unix</div>
+            <div class="item-skills" data-percent="0.80">C++</div>
+            <div class="item-skills" data-percent="0.80">C</div>
+            <div class="item-skills" data-percent="0.80">GIS (ArcGIS, GRASS)</div>
+            <div class="item-skills" data-percent="0.80">Lisps (Scheme, Racket)</div>
 
             <div class="skills-legend clearfix">
               <div class="legend-left legend">Beginner</div>
@@ -120,25 +120,6 @@
               <div class="legend-right legend"><span>Advanced</span></div>
               <div class="legend-right legend">Expert</div>
             </div>
-          </div>
-        </div>
-        <!-- LANGUAGES -->
-        <div class="box">
-          <h2>Technical</h2>
-          <div id="language-skills">
-            <div class="skill">Ruby<div class="icons pull-right"><div style="width: 100%;" class="icons-red"></div></div></div>
-            <div class="skill">Rails<div class="icons pull-right"><div style="width: 100%;" class="icons-red"></div></div></div>
-            <div class="skill">C++<div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
-            <div class="skill">C<div class="icons pull-right"><div style="width: 85%;" class="icons-red"></div></div></div>
-            <div class="skill">LISP (Scheme/Racket)<div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
-            <div class="skill">Postgres<div class="icons pull-right"><div style="width: 88%;" class="icons-red"></div></div></div>
-            <div class="skill">MySQL<div class="icons pull-right"><div style="width: 88%;" class="icons-red"></div></div></div>
-            <div class="skill">HTML/CSS<div class="icons pull-right"><div style="width: 95%;" class="icons-red"></div></div></div>
-            <div class="skill">Linux<div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
-            <div class="skill">Git<div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
-            <div class="skill">ArcGIS<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
-            <div class="skill">ENVI<div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
-            <div class="skill">VIM<div class="icons pull-right"><div style="width: 99%;" class="icons-red"></div></div></div>
           </div>
         </div>
       </div>
