change email address

--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -73,7 +73,7 @@
             <h2>Contact</h2>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-envelope fa-fw"></span></div>
-              <div class="title only pull-right"><a href="mailto:ryanselk@gmail.com">ryanselk@gmail.com</a></div>
+              <div class="title only pull-right"><a href="mailto:me@ryanselk.com">me@ryanselk.com</a></div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-github fa-fw"></span></div>
