--- a/_includes/themes/bootstrap-3/side.html
+++ b/_includes/themes/bootstrap-3/side.html
@@ -50,7 +50,7 @@
           <div id="photo-header" class="text-center">
             <!-- PHOTO (AVATAR) -->
               <h1><strong>Ryan Selk</strong><small> Software Developer</small></h1>
-                 <a href="http://ryanselk.com">HOME</a> | <a href="http://ryanselk.com/archive.html">ABOUT</a> | <a href="http://ryanselk.com/archive.html">ARCHIVE</a>
+                 <a href="http://ryanselk.com">HOME</a> | <a href="http://ryanselk.com/archive.html">ABOUT</a>
           </div>
         </div>
       </div>
